# todo-tree

./: .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  checklist.txt  flake.nix
.github/workflows/: ci.yml  homebrew.yml  release.yml  test-binstall.yml  todo-tree-action.yml  todo-tree.yml
cli/: .todorc.example.json  .todorc.json  Cargo.toml  flake.nix
cli/src/: cli.rs  config.rs  lib.rs  parser.rs  scanner.rs
cli/src/commands/: init.rs  list.rs  mod.rs  scan.rs  stats.rs  tags.rs  workflow.rs
cli/src/printer/: flat.rs  json.rs  mod.rs  options.rs  summary.rs  tree.rs  utils.rs
cli/src/utils/: display.rs
core/: Cargo.toml
core/src/: lib.rs  parser.rs  priority.rs  tags.rs  types.rs
docs/: ARCHITECTURE.md
extensions/zed/: Cargo.toml  extension.toml
extensions/zed/src/: cli.rs  formatter.rs  lib.rs  slash_commands.rs  types.rs
src/: cli.rs  config.rs  lib.rs  parser.rs  printer.rs  scanner.rs
