[package]
name = "todo-tree"
version = "0.4.1"
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A CLI tool to find and display TODO-style comments in your codebase"
readme = "../README.md"
keywords = ["todo", "cli", "developer-tools", "productivity"]
categories = ["command-line-utilities", "development-tools"]
default-run = "todo-tree"

[lib]
name = "todo_tree"
path = "src/lib.rs"

[[bin]]
name = "todo-tree"
path = "src/main.rs"

[[bin]]
name = "tt"
path = "src/bin/tt.rs"

[dependencies]
todo-tree-core = { path = "../core", version = "0.4.0" }
clap = { version = "4.5.60", features = ["derive", "env"] }
regex = "1.12.3"
ignore = "0.4.25"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
yaml_serde = "0.10.3"
colored = "3.1.1"
anyhow = "1.0.102"
directories-next = "2.0"
glob = "0.3.3"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/todo-tree-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "todo-tree-{ target }/{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/todo-tree-{ target }.zip"
pkg-fmt = "zip"
